--- a/app/globals.css
+++ b/app/globals.css
@@ -161,3 +161,19 @@ body {
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
 }
+
+/* Add this to your global.css or a relevant CSS file */
+.loader {
+  border: 5px solid rgba(0, 0, 0, 0.1);
+  width: 46px;
+  height: 46px;
+  border-radius: 50%;
+  border-left-color: rgb(1, 149, 1);
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
